--- a/SamplePOC/SamplePOC/Views/Shared/_Layout.cshtml
+++ b/SamplePOC/SamplePOC/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET App</p>
+            <p>&copy; @DateTime.Now.Year - My ASP.NET App123</p>
         </footer>
     </div>
 
